--- a/assets/package.json
+++ b/assets/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "alpinejs": "^3.10.3",
+    "chart.js": "^3.9.1",
     "sortablejs": "^1.15.0",
     "tailwindcss": "^3.1.8"
   }
